[package]
name = 'adnl-proxy'
version = '0.1.0'
edition = '2021'

description = 'Proxy application for accessing TON Sites. Supports WebRTC connections.'
categories = ['network-programming', 'web-programming']
keywords = ['ton', 'adnl', 'proxy']
authors = ['ProgramCrafter']
publish = false
license = 'MIT'

[dependencies]
adnl = {path = 'adnl-rs/', features = ['dalek', 'std']}
ciborium-io = {version = '0.2.0', features = ['std']}
curve25519-dalek = {version = '4.0.0-pre.2'}
x25519-dalek = {version = '2.0.0-pre.1'}
rand = '0.8.5'

log = '0.4'
tokio = {version = '1', features = ['full']}
